src/components/Layout/styles.module.css
.container {
  display: grid;
  grid-template-areas: 'spacingLeft main spacingRight';
  grid-template-columns: minmax(0, 1fr) minmax(0, 100%) minmax(0, 1fr);
  margin: 0;

  @media (--sm-up) {
    margin: 0 var(--sp16);
  }

  @media (--md-up) {
    margin: 0 var(--sp40);
  }

  @media (--lg-up) {
    grid-template-columns: minmax(0, 1fr) 1105px minmax(0, 1fr);
    margin: 0 auto;
  }
}

.main {
  grid-column: main;

  @media (--sm-up) {
    display: grid;
    grid-template-areas: 'content';
    grid-template-columns: minmax(0, 100%);
    grid-column-gap: 1.25rem;
  }

  @media (--md-up) {
    grid-template-areas: 'left content right';
    grid-template-columns: 6.125rem minmax(0, 100%) 17rem;
    grid-column-gap: 2.5rem;
  }

  @media (--lg-up) {
    grid-template-areas: 'left content content content content content content content right right right';
    grid-template-columns: 6.125rem repeat(10, [col-start] minmax(0, 1fr));
  }
}

.sidenav {
  @media (--md-up) {
    grid-column: left;
  }

  & .sideNavContent {
    /* position: sticky; */

    /* topNavbar height */

    /* top: 73px; */
  }
}

.article {
  position: relative;
  grid-column: content;

  @media (--sm-up) {
    min-height: 100vh;
    min-height: calc(var(--ivh) * 100);
    min-height: 100dvh;
    padding-bottom: 0;
  }

  &.hasNavBar {
    padding-bottom: var(--global-nav-height);
  }
}

.aside {
  & .content {
    display: flex;
    flex-direction: column;

    & .top {
      & :global(> *) {
        margin-top: var(--sp32);
      }
    }
  }

  @media (--md-up) {
    & .content {
      /* min-height: 100vh; */

      & .top {
        flex-grow: 1;
      }
    }

    grid-column: right;
    padding-left: var(--sp8);
  }
}

